# Max3Sat

./: CMakeLists.txt  GeneticIndividual.cpp  GeneticIndividual.h  GeneticOptimizer.cpp  GeneticOptimizer.h  Max3SatProblem.cpp  Max3SatProblem.h  README.md  SatIndividual.cpp  SatIndividual.h  SatOptimizer.cpp  SatOptimizer.h  main.cpp
